examples/failing/02-missing-number.hogo
; This fails because the number is missing on "forward".
forward